# BTO

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: api.py  astro.py  config.py  main.py  noaa.py  stations.py  tides.py
backend/tests/: conftest.py  test_api.py  test_health.py  test_static.py  test_tides.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Dashboard.tsx  api.ts  main.tsx  tides.test.ts  tides.ts  tweaks.ts  types.ts
frontend/src/components/: Charts.tsx  ComparePanel.tsx  FocusPanel.tsx  KpiStrip.tsx  Sidebar.tsx  StationTile.tsx  Toolbar.tsx  Tweaks.tsx
frontend/src/styles/: glacier.css  tides.css  tokens.css  tweaks.css
