[project]
name = "bto"
version = "0.1.0"
description = "Bellingham Tidal Observatory — real-time NOAA tide dashboard."
requires-python = ">=3.13"
dependencies = [
    "astral>=3.2",
    "fastapi>=0.136.3",
    "noaa-coops>=0.4.0",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
